Fix misalignment with mixer sliders

--- a/src/index.css
+++ b/src/index.css
@@ -22,9 +22,6 @@ code {
   display: inline-block;
   transform: rotate(90deg) translate(50px, 0);
 }
-.mixerSlider input {
-  position: relative;
-}
 .mixerSlider input::-webkit-slider-runnable-track {
   background-color: rgb(35,35,35);
   padding: 8px 0;
@@ -33,9 +30,8 @@ code {
   background-color: rgb(80, 80, 80);
   border-radius: 0;
   padding: 32px 8px;
-  /* margin: auto; */
-  /* margin-top: -30px; */
-  /* transform: translate(-55px); */
+  position: relative;
+  bottom: 26px;
 }
 
 svg.audioVisualiser {
